objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>AA_HH__c</fullName>
        <label>AA HH %</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADS__c</fullName>
        <label>ADS %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AntennaTV_Affiliate__c</fullName>
        <label>AntennaTV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>Cozi TV</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>H&amp;I</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>MeTV</fullName>
                </value>
                <value>
                    <fullName>MundoMax</fullName>
                </value>
                <value>
                    <fullName>MyNetworkTV</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>Star</fullName>
                </value>
                <value>
                    <fullName>Telemundo</fullName>
                </value>
                <value>
                    <fullName>ThisTV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AntennaTV_Call_Letters__c</fullName>
        <label>AntennaTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AntennaTV_Channel_Position__c</fullName>
        <label>AntennaTV Channel Position</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AntennaTV_Launch_Date__c</fullName>
        <label>AntennaTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AntennaTV__c</fullName>
        <label>AntennaTV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bahakel Comm</fullName>
                </value>
                <value>
                    <fullName>Belo Corporation</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Boise Telecasters</fullName>
                </value>
                <value>
                    <fullName>Bonten</fullName>
                </value>
                <value>
                    <fullName>Broadland Properties</fullName>
                </value>
                <value>
                    <fullName>Calkins Media</fullName>
                </value>
                <value>
                    <fullName>Camino Real</fullName>
                </value>
                <value>
                    <fullName>Cedar Rapids Television Co</fullName>
                </value>
                <value>
                    <fullName>Cocola Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Community Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Delta Media</fullName>
                </value>
                <value>
                    <fullName>Dreamcatcher</fullName>
                </value>
                <value>
                    <fullName>DTV America Corp</fullName>
                </value>
                <value>
                    <fullName>Ellington Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Esteem Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Fireweed Communications Corporation</fullName>
                </value>
                <value>
                    <fullName>Flood Communication</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Freelancer TV</fullName>
                </value>
                <value>
                    <fullName>Gannett Company</fullName>
                </value>
                <value>
                    <fullName>GoCom Media Of Illinois/Sinclair</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>Great Plains Television</fullName>
                </value>
                <value>
                    <fullName>Guardian Television Network</fullName>
                </value>
                <value>
                    <fullName>Howard Stirk Holdings</fullName>
                </value>
                <value>
                    <fullName>Hubbard</fullName>
                </value>
                <value>
                    <fullName>JKB Associates</fullName>
                </value>
                <value>
                    <fullName>KGBY Partners</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BounceTV_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>BounceTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BounceTV_Channel_Position__c</fullName>
        <label>BounceTV Channel Position</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BounceTV_Launch_Date__c</fullName>
        <label>BounceTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bounce_TV_Affiliate_Owner__c</fullName>
        <label>Bounce TV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belo Corporation</fullName>
                </value>
                <value>
                    <fullName>Broadland Properties</fullName>
                </value>
                <value>
                    <fullName>Calkins Media</fullName>
                </value>
                <value>
                    <fullName>Cocola Broadcasting</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Gannett Company</fullName>
                </value>
                <value>
                    <fullName>Great Plains Television</fullName>
                </value>
                <value>
                    <fullName>Guardian Television Network</fullName>
                </value>
                <value>
                    <fullName>JKB Associates</fullName>
                </value>
                <value>
                    <fullName>King Kong Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Lenfest Broadcasting</fullName>
                </value>
                <value>
                    <fullName>LIN TV Corporation</fullName>
                </value>
                <value>
                    <fullName>Louisiana Media Company</fullName>
                </value>
                <value>
                    <fullName>Meredith Corporation</fullName>
                </value>
                <value>
                    <fullName>Mission Broadcasting Group</fullName>
                </value>
                <value>
                    <fullName>Nexstar Broadcasting Group</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Raycom Media</fullName>
                </value>
                <value>
                    <fullName>Register Communications</fullName>
                </value>
                <value>
                    <fullName>Scripps</fullName>
                </value>
                <value>
                    <fullName>Weigel Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Esteem Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Titan</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bounce_TV_Affiliate__c</fullName>
        <label>Bounce TV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>HSN</fullName>
                </value>
                <value>
                    <fullName>ME-TV</fullName>
                </value>
                <value>
                    <fullName>My Network TV</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>Telefutura</fullName>
                </value>
                <value>
                    <fullName>UNIMAS</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BuzzrTV_Affiliate_Owner__c</fullName>
        <label>BuzzrTV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Spirit Media</fullName>
                </value>
                <value>
                    <fullName>Cox</fullName>
                </value>
                <value>
                    <fullName>Gannett</fullName>
                </value>
                <value>
                    <fullName>LIN TV</fullName>
                </value>
                <value>
                    <fullName>Raycom Media</fullName>
                </value>
                <value>
                    <fullName>Scripps</fullName>
                </value>
                <value>
                    <fullName>Weigel Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>COX Media Group</fullName>
                </value>
                <value>
                    <fullName>PMCM TV, LLC</fullName>
                </value>
                <value>
                    <fullName>Sinclair Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>Great Plains Television</fullName>
                </value>
                <value>
                    <fullName>Citadel Communications</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Nexstar Broadcasting Group</fullName>
                </value>
                <value>
                    <fullName>Ramar Communications</fullName>
                </value>
                <value>
                    <fullName>DTV</fullName>
                </value>
                <value>
                    <fullName>Sunbeam</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BuzzrTV_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>BuzzrTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuzzrTV_Channel_Position__c</fullName>
        <label>BuzzrTV Channel Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BuzzrTV_Launch_Date__c</fullName>
        <label>BuzzrTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuzzrTV__c</fullName>
        <label>BuzzrTV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>MyNetworkTV</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>Unimas</fullName>
                </value>
                <value>
                    <fullName>ME-TV</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>COZI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cozi_TV_Affiliate_Owner__c</fullName>
        <label>Cozi TV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>Dispatch Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>Scripps</fullName>
                </value>
                <value>
                    <fullName>Block Communications</fullName>
                </value>
                <value>
                    <fullName>Intermountain West</fullName>
                </value>
                <value>
                    <fullName>Trans America</fullName>
                </value>
                <value>
                    <fullName>Ellis-Wilson</fullName>
                </value>
                <value>
                    <fullName>Franklin Media</fullName>
                </value>
                <value>
                    <fullName>Cordillera Communications</fullName>
                </value>
                <value>
                    <fullName>Community Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>London Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>Red River Broadcasting</fullName>
                </value>
                <value>
                    <fullName>Morris Multimedia</fullName>
                </value>
                <value>
                    <fullName>Granite Broadcasting Corporation</fullName>
                </value>
                <value>
                    <fullName>NRJ TV, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cozi_TV_Affiliate__c</fullName>
        <label>Cozi TV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>Cozi</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>My Network</fullName>
                </value>
                <value>
                    <fullName>Me-TV</fullName>
                </value>
                <value>
                    <fullName>CBS/This TV</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cozi_TV_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>Cozi TV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cozi_TV_Channel_Position__c</fullName>
        <label>Cozi TV Channel Position</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cozi_TV_Launch_Date__c</fullName>
        <label>Cozi TV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMA_Rank__c</fullName>
        <externalId>true</externalId>
        <label>DMA Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EscapeTV_Affiliate_Owner__c</fullName>
        <label>EscapeTV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Spirit Media</fullName>
                </value>
                <value>
                    <fullName>Citadel Communications</fullName>
                </value>
                <value>
                    <fullName>Cox Media Group</fullName>
                </value>
                <value>
                    <fullName>Great Plains Television</fullName>
                </value>
                <value>
                    <fullName>Louisiana Media Company</fullName>
                </value>
                <value>
                    <fullName>PMCM TV, LLC</fullName>
                </value>
                <value>
                    <fullName>Raycom</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>Scripps</fullName>
                </value>
                <value>
                    <fullName>Lockwood</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EscapeTV_Affiliate__c</fullName>
        <label>EscapeTV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unimas</fullName>
                </value>
                <value>
                    <fullName>ME-TV</fullName>
                </value>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>My Network TV</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EscapeTV_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>EscapeTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscapeTV_Channel_Position__c</fullName>
        <label>EscapeTV Channel Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscapeTV_Launch_Date__c</fullName>
        <label>EscapeTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GritTV_Affiliate_Owner__c</fullName>
        <label>GritTV Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>Sinclair Broadcast Group</fullName>
                </value>
                <value>
                    <fullName>Raycom</fullName>
                </value>
                <value>
                    <fullName>Cox Media Group</fullName>
                </value>
                <value>
                    <fullName>Great Plains Television</fullName>
                </value>
                <value>
                    <fullName>Citadel Communications</fullName>
                </value>
                <value>
                    <fullName>Carlisle One Media</fullName>
                </value>
                <value>
                    <fullName>PMCM TV, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GritTV_Affiliate__c</fullName>
        <label>GritTV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>Unimas</fullName>
                </value>
                <value>
                    <fullName>MyNetworkTV</fullName>
                </value>
                <value>
                    <fullName>Me-TV</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GritTV_Call_Letters__c</fullName>
        <label>GritTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GritTV_Channel_Position__c</fullName>
        <label>GritTV Channel Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GritTV_Launch_Date__c</fullName>
        <label>GritTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Justice_Network_Affiliate_Owner__c</fullName>
        <label>Justice Network Affiliate Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tegna</fullName>
                </value>
                <value>
                    <fullName>LIN TV</fullName>
                </value>
                <value>
                    <fullName>Raycom Media</fullName>
                </value>
                <value>
                    <fullName>Scripps</fullName>
                </value>
                <value>
                    <fullName>Weigel broadcasting</fullName>
                </value>
                <value>
                    <fullName>Univision</fullName>
                </value>
                <value>
                    <fullName>COX Media Group</fullName>
                </value>
                <value>
                    <fullName>PMCM TV, LLC</fullName>
                </value>
                <value>
                    <fullName>Cocola Broadcasting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justice_Network_Affiliate__c</fullName>
        <label>Justice Network Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>ME-TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justice_Network_Call_Letters__c</fullName>
        <externalId>true</externalId>
        <label>Justice Network Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justice_Network_Channel_Position__c</fullName>
        <label>Justice Network Channel Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Justice_Network_Launch_Date__c</fullName>
        <label>Justice Network Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Rank__c</fullName>
        <formula>if( LEN(text(X2014_2015_DMA_Rank__c  ))=1,&quot;00&quot;&amp;TEXT(X2014_2015_DMA_Rank__c) , 

if( LEN(text(X2014_2015_DMA_Rank__c  ))=2,&quot;0&quot;&amp;TEXT(X2014_2015_DMA_Rank__c), 

TEXT(X2014_2015_DMA_Rank__c)))

&amp;&quot; - &quot;&amp;Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTA__c</fullName>
        <label>OTA %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ThisTV_Affiliate_Owner__c</fullName>
        <label>ThisTV Affiliate Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThisTV_Affiliate__c</fullName>
        <label>ThisTV Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>CBS</fullName>
                </value>
                <value>
                    <fullName>CW</fullName>
                </value>
                <value>
                    <fullName>EstrellaTV</fullName>
                </value>
                <value>
                    <fullName>FOX</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>MeTV</fullName>
                </value>
                <value>
                    <fullName>MyNetworkTV</fullName>
                </value>
                <value>
                    <fullName>NBC</fullName>
                </value>
                <value>
                    <fullName>SonLife</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThisTV_Call_Letters__c</fullName>
        <label>ThisTV Call Letters</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThisTV_Channel_Position__c</fullName>
        <label>ThisTV Channel Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThisTV_Launch_Date__c</fullName>
        <label>ThisTV Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HST</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>AST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>US_HH__c</fullName>
        <label>US HH %</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wired_Cable__c</fullName>
        <label>Wired Cable %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2014_2015_DMA_Rank__c</fullName>
        <externalId>true</externalId>
        <label>2014 - 2015 DMA Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>ANTV</fullName>
        <columns>NAME</columns>
        <columns>X2014_2015_DMA_Rank__c</columns>
        <columns>US_HH__c</columns>
        <columns>AntennaTV_Affiliate__c</columns>
        <columns>AntennaTV__c</columns>
        <columns>AntennaTV_Call_Letters__c</columns>
        <columns>AntennaTV_Channel_Position__c</columns>
        <columns>AntennaTV_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AntennaTV_Call_Letters__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ANTV</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>X2014_2015_DMA_Rank__c</columns>
        <columns>US_HH__c</columns>
        <columns>AA_HH__c</columns>
        <columns>Justice_Network_Affiliate__c</columns>
        <columns>Justice_Network_Affiliate_Owner__c</columns>
        <columns>Justice_Network_Call_Letters__c</columns>
        <columns>Justice_Network_Channel_Position__c</columns>
        <columns>Justice_Network_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BOUNCE</fullName>
        <columns>DMA_Rank__c</columns>
        <columns>NAME</columns>
        <columns>US_HH__c</columns>
        <columns>Bounce_TV_Affiliate__c</columns>
        <columns>Bounce_TV_Affiliate_Owner__c</columns>
        <columns>BounceTV_Call_Letters__c</columns>
        <columns>BounceTV_Channel_Position__c</columns>
        <columns>BounceTV_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bounce_TV_Affiliate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>BOUNCE</label>
    </listViews>
    <listViews>
        <fullName>COZI</fullName>
        <columns>DMA_Rank__c</columns>
        <columns>NAME</columns>
        <columns>US_HH__c</columns>
        <columns>Cozi_TV_Affiliate__c</columns>
        <columns>Cozi_TV_Affiliate_Owner__c</columns>
        <columns>Cozi_TV_Call_Letters__c</columns>
        <columns>Cozi_TV_Channel_Position__c</columns>
        <columns>Cozi_TV_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cozi_TV_Affiliate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>COZI</label>
    </listViews>
    <listViews>
        <fullName>Escape</fullName>
        <columns>DMA_Rank__c</columns>
        <columns>NAME</columns>
        <columns>US_HH__c</columns>
        <columns>EscapeTV_Affiliate__c</columns>
        <columns>EscapeTV_Affiliate_Owner__c</columns>
        <columns>EscapeTV_Call_Letters__c</columns>
        <columns>EscapeTV_Channel_Position__c</columns>
        <columns>EscapeTV_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Escape</label>
    </listViews>
    <listViews>
        <fullName>Grit</fullName>
        <columns>DMA_Rank__c</columns>
        <columns>NAME</columns>
        <columns>US_HH__c</columns>
        <columns>GritTV_Affiliate__c</columns>
        <columns>GritTV_Affiliate_Owner__c</columns>
        <columns>GritTV_Call_Letters__c</columns>
        <columns>GritTV_Channel_Position__c</columns>
        <columns>GritTV_Launch_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Grit</label>
    </listViews>
</CustomObject>